[package]
name = "vsop2013"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = { version = "7.1", optional = true }
postcard = { version = "1.0.2", features = ["alloc"] }
serde = { version = "1.0.144", default-features = false, features = ["derive", "alloc"] }
time = { version = "0.3", features = ["serde", "time-macros", "macros", "parsing"] }

[dev-dependencies]
nom = "7.1"
time = "0.3"

[[example]]
name = "convert"
required-features = ["nom"]
